Engineering services in to ordered lists

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ th, td {
         We excel in the following areas<br>
         <ul>
 	       <li><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a></li>
-	       <li>INTERNET OF THINGS</li><br>
+	       <li>INTERNET OF THINGS</li>
 	       <li>WEB / MOBILE SOLUTIONS</li>
        </ul>
      </div>
@@ -281,132 +281,9 @@ th, td {
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
       <h4>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.</h4><br>
-      <!-- <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
     </div>
   </div>
 </div>
-
-
-<!-- Container (login Section) -->
-<!-- <div id="login" class="container-fluid">
-  <h2 class="text-center">LOGIN</h2>
-  <div class="row">
-    <div class="col-sm-5">
-      <p>Please enter your Credentials</p> -->
-        <!--
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
-      -->
-    <!-- </div>
-    <div class="col-sm-7 slideanim">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="loginid" name="loginid" placeholder="email" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="password" name="password" placeholder="password" type="password" required>
-        </div>
-      </div>
-    <br>
-      <div class="row">
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Enter</button>
-        </div>
-      </div>
-    </div> -->
-  <!-- </div>
-</div> -->
-
-<!-- Container (Dashboard Section) -->
-<!-- <div id="dashboard" class="container-fluid">
-  <h2 class="text-center">DASHBOARD</h2>
-<table>
-  <tr  >
-    <th class ="ctralign">Innova 1</th>
-    <th class ="ctralign">Innova 2</th>
-    <th class ="ctralign">Benz 1</th>
-    <th class ="ctralign">Benz 2</th>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td class="booked"></td>
-    <td></td>
-  </tr>
-
-</table>
-</div> -->
-
-
-
-<!-- Container (mybookings Section) -->
-<!-- <div id="mybookings" class="container-fluid">
-  <h2 class="text-center">My Bookings</h2>
-<table>
-  <tr>
-    <th>Booking ID</th>
-    <th>From Date</th>
-    <th>From Time</th>
-    <th>To Date</th>
-    <th>To Time</th>
-    <th>Cab Type</th>
-    <th>Cab name</th>
-    <th>Source</th>
-    <th>Destination</th>
-    <th>Cancel</th>
-  </tr>
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>$100</td>
-  </tr>
-
-</table>
-</div> -->
-
-
-<!-- Container (Book Section) -->
-<!-- <div id="book" class="container-fluid bg-grey">
-  <h2 class="text-center">BOOK</h2>
-  <div class="row">
-    <div class="col-sm-5">
-      <p>Please enter your booking details here.</p> -->
-        <!--
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
-      -->
-    <!-- </div>
-    <div class="col-sm-7 slideanim">
-
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="cabtype" name="cabtype" placeholder="Cab Type" type="text" required>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="fromDate" name="fromDate" placeholder="From Date" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="fromTime" name="fromTime" placeholder="From Time" type="email" required>
-        </div>
-      </div>
-  </div>
-</div> -->
-
-
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
   <h2>SERVICES</h2>
@@ -430,23 +307,7 @@ th, td {
     </div>
   </div>
   <br><br>
-  <!-- <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-leaf logo-small"></span>
-      <h4>GREEN</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-certificate logo-small"></span>
-      <h4>CERTIFIED</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-wrench logo-small"></span>
-      <h4 style="color:#303030;">HARD WORK</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </div> -->
+
 </div>
 
 <!-- Container (Portfolio Section) -->
@@ -456,7 +317,7 @@ th, td {
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\smartclinic1.jpg" alt="Paris" width="400" height="300">
+        <img src="img\smartclinic1.jpg" alt="Smart Clinic" width="400" height="300">
         <p><strong>Smart Clinic</strong></p>
         <p>Yes, we built Smart Clinic</p>
       </div>
@@ -465,7 +326,7 @@ th, td {
       <div class="thumbnail">
         <img src="img\newyork.jpg" alt="New York" width="400" height="300">
         <p><strong>Smart Cab</strong></p>
-        <p>We built Smart Cab</p>
+        <p>Yes,We built Smart Cab</p>
       </div>
     </div>
 
@@ -474,42 +335,49 @@ th, td {
 <!-- Container (Pricing Section) -->
 <div id="engservices" class="container-fluid">
   <h2>Engineering Services</h2>
-  Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.
-  <br>
-  Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT & engineering skills, can help our customers to achieve their desired quality & financial objectives.
-<br>
+  <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.
+  Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.
+</p>
+<p>
   At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.
-<br>
+<p>
   We offer services in
-<br>
-  Model-based Design Automation<br>
-      - NX Open/Ufunc based automation solutions<br>
-      - 3D PDF - Anark, Tetra4D, Adobe SDK automation<br>
-      - NX Master modelling<br>
-      - NX Validation/QA solutions<br>
-      - PMI &nbsp; Ballooning automation<br>
-
-  Model-based Manufacturing Automation<br>
-      - NX Open/Ufunc based automation solutions<br>
-      - CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)<br>
-      - Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)<br>
-      - Shop documentation automation<br>
-      - Feature-based machining solutions<br>
-      - Standardization of CAM strategies (3, 3+2, 5-axis machining)<br>
-
-  Model-based Inspection Automation<br>
-      - NX Open/Ufunc based automation solutions<br>
-      - NX CMM programming productivity solutions<br>
-      - NX CMM &nbsp; PC-DMIS integration<br>
-
-  NX Environment Customization (Native &nbsp; Teamcenter)<br>
-      - Environment variables management<br>
-      - CAD/CAM resource library setup<br>
-      - Legacy library migration<br>
-
-  Teamcenter Manufacturing Resource Manager<br>
-      - Classification (Welding Processes)<br>
-      - Customization (Rich-client, Server)<br>
+<ul>
+  <li>Model-based Design Automation</li>
+      <li><ul>
+        <li>NX Open/Ufunc based automation solutions</li>
+        <li>3D PDF - Anark, Tetra4D, Adobe SDK automation</li>
+        <li>NX Master modelling</li>
+        <li>NX Validation/QA solutions</li>
+        <li>PMI Ballooning automation</li>
+      </ul></li>
+  <li>Model-based Manufacturing Automation</li>
+      <li><ul>
+        <li>NX Open/Ufunc based automation solutions</li>
+        <li>CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)</li>
+        <li>Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)</li>
+        <li>Shop documentation automation</li>
+        <li>Feature-based machining solutions</li>
+        <li>Standardization of CAM strategies (3, 3+2, 5-axis machining)</li>
+      </ul></li>
+  <li>Model-based Inspection Automation</li>
+      <li><ul>
+        <li>NX Open/Ufunc based automation solutions</li>
+        <li>NX CMM programming productivity solutions</li>
+        <li>NX CMM &nbsp; PC-DMIS integration</li>
+      </ul></li>
+  <li>NX Environment Customization (Native &nbsp; Teamcenter)</li>
+    <li><ul>
+      <li>Environment variables management</li>
+      <li>CAD/CAM resource library setup</li>
+      <li>Legacy library migration</li>
+    </ul></li>
+  <li>Teamcenter Manufacturing Resource Manager</li>
+    <li><ul>
+      <li>Classification (Welding Processes)</li>
+      <li>Customization (Rich-client, Server)</li>
+    </ul></li>
+</ul>      
  </div>
 </div>
 <!-- Container (Contact Section) -->
