--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ th, td {
 <!-- Container (Pricing Section) -->
 <div id="engservices" class="container-fluid">
   <h2>Engineering Services</h2>
-  <div class="col-sm-8">
+  <div class="row">
     <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.
       Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.
     </p>
@@ -352,7 +352,8 @@ th, td {
         <li>NX Validation/QA solutions</li>
         <li>PMI Ballooning automation</li>
       </ul>
-  <li>Model-based Manufacturing Automation</li>
+    </ul>
+  <!-- <li>Model-based Manufacturing Automation</li>
       <li><ul>
         <li>NX Open/Ufunc based automation solutions</li>
         <li>CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)</li>
@@ -378,7 +379,7 @@ th, td {
       <li>Classification (Welding Processes)</li>
       <li>Customization (Rich-client, Server)</li>
     </ul></li>
-</ul>
+</ul> -->
 </div>
  </div>
 </div>
