--- a/index.html
+++ b/index.html
@@ -331,7 +331,31 @@ th, td {
     </div>
 </div><br>
 
-<div id="engservices" class="container">
+<div id="engservices" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+
+      <h4>Thinking Things Technologies(TTT) is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
+      <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.
+        The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
+        <br>
+        The company is structured as follows<br>
+        <ul>
+          <li><a href="#engservices">Engineering Services</a></li>
+          <li><a href="#engservices">Product Services</a></li>
+        </ul>
+        We excel in the following areas<br>
+        <ul>
+	       <li><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a></li>
+	       <li>INTERNET OF THINGS</li>
+	       <li>WEB / MOBILE SOLUTIONS</li>
+       </ul>
+     </div>
+
+  </div>
+</div>
+</div>
+<!-- <div id="engservices" class="container">
   <h2>Engineering Services</h2>
   <div class="row">
     <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
@@ -349,7 +373,7 @@ th, td {
           <li>PMI Ballooning automation</li>
         </ul>
       </ul>
-    </div>
+    </div> -->
   <!-- <li>Model-based Manufacturing Automation</li>
       <li><ul>
         <li>NX Open/Ufunc based automation solutions</li>
@@ -377,9 +401,9 @@ th, td {
       <li>Customization (Rich-client, Server)</li>
     </ul></li>
 </ul> -->
-</div>
+<!-- </div>
  </div>
-</div>
+</div> -->
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
