--- a/index.html
+++ b/index.html
@@ -229,13 +229,8 @@ th, td {
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#mission">OUR VALUES</a></li>
-        <!-- <li><a href="#login">LOGIN</a></li>
-        <li><a href="#dashboard">DASHBOARD</a></li>
-        <li><a href="#mybookings">My BOOKINGS</a></li>
-        <li><a href="#book">BOOK</a></li> -->
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#portfolio">PRODUCTS</a></li>
-        <!-- <li><a href="#pricing">PRICING</a></li> -->
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -307,7 +302,6 @@ th, td {
     </div>
   </div>
   <br><br>
-
 </div>
 
 <!-- Container (Portfolio Section) -->
@@ -329,39 +323,19 @@ th, td {
         <p>Yes,We built Smart Cab</p>
       </div>
     </div>
-</div><br>
+  </div><br>
+</div>
 
 <div id="engservices" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h4>Thinking Things Technologies(TTT) is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
-      <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.
-        The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
-        <br>
-        The company is structured as follows<br>
-        <ul>
-          <li><a href="#engservices">Engineering Services</a></li>
-          <li><a href="#engservices">Product Services</a></li>
-        </ul>
-        We excel in the following areas<br>
-        <ul>
-	       <li><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a></li>
-	       <li>INTERNET OF THINGS</li>
-	       <li>WEB / MOBILE SOLUTIONS</li>
-       </ul>
-     </div>
-
-  </div>
-</div>
-</div>
-<!-- <div id="engservices" class="container">
-  <h2>Engineering Services</h2>
-  <div class="row">
-    <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
-    <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
-    <p>At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.</p>
-    <div class="col-sm-8">
+    <div class="col-sm-4">
+      <h2>Engineering Services</h2>
+    </div>
+    <div class="row">
+      <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
+      <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
+      <p>At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.</p>
+    </div>
+    <!-- <div class="col-sm-8">
       <h4>We offer services in</h4>
       <ul>
         <li>Model-based Design Automation</li>
@@ -372,8 +346,9 @@ th, td {
           <li>NX Validation/QA solutions</li>
           <li>PMI Ballooning automation</li>
         </ul>
-      </ul>
-    </div> -->
+      </ul> -->
+    </div>
+</div>    
   <!-- <li>Model-based Manufacturing Automation</li>
       <li><ul>
         <li>NX Open/Ufunc based automation solutions</li>
