--- a/index.html
+++ b/index.html
@@ -327,14 +327,24 @@ th, td {
 </div>
 
 <div id="engservices" class="container-fluid">
-    <div class="col-sm-4">
-      <h2>Engineering Services</h2>
-    </div>
-    <div class="row">
-      <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
-      <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
-      <p>At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.</p>
-    </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h2>Engineering Services</h2>
+        </div>
+      </div>
+      <div class="row">
+        <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
+        <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbsp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
+        <p>At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>We offer services in</h4>
+          <ul>
+            <li>Model-based Design Automation</li>
+          </ul>  
+        </div>
+      </div>
     <!-- <div class="col-sm-8">
       <h4>We offer services in</h4>
       <ul>
@@ -348,7 +358,7 @@ th, td {
         </ul>
       </ul> -->
     </div>
-</div>    
+</div>
   <!-- <li>Model-based Manufacturing Automation</li>
       <li><ul>
         <li>NX Open/Ufunc based automation solutions</li>
