--- a/index.html
+++ b/index.html
@@ -342,7 +342,14 @@ th, td {
           <h4>We offer services in</h4>
           <ul>
             <li>Model-based Design Automation</li>
-          </ul>  
+            <ul>
+              <li>NX Open/Ufunc based automation solutions</li>
+              <li>3D PDF - Anark, Tetra4D, Adobe SDK automation</li>
+              <li>NX Master modelling</li>
+              <li>NX Validation/QA solutions</li>
+              <li>PMI Ballooning automation</li>
+            </ul>
+          </ul>
         </div>
       </div>
     <!-- <div class="col-sm-8">
