--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@ th, td {
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#mission">OUR VALUES</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PRODUCTS</a></li>
+        <li><a href="#solutions">SOLUTIONS</a></li>
+        <li><a href="#engineeringservices">SERVICES</a></li>
+        <li><a href="#productservices">PRODUCTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -252,12 +253,12 @@ th, td {
         <br>
         The company is structured as follows<br>
         <ul>
-          <li><a href="#engservices">Engineering Services</a></li>
-          <li><a href="#engservices">Product Services</a></li>
+          <li><a href="#engineeringservices">Engineering Services</a></li>
+          <li><a href="#productservices">Product Services</a></li>
         </ul>
         We excel in the following areas<br>
         <ul>
-	       <li><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a></li>
+	       <li><a href="#engineeringservices">CAD/CAM/CMM SOLUTIONS</a></li>
 	       <li>INTERNET OF THINGS</li>
 	       <li>WEB / MOBILE SOLUTIONS</li>
        </ul>
@@ -280,14 +281,14 @@ th, td {
   </div>
 </div>
 <!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
-  <h2>SERVICES</h2>
+<div id="solutions" class="container-fluid text-center">
+  <h2>SOLUTIONS</h2>
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a> </h4>
+      <h4><a href="#engineeringservices">CAD/CAM/CMM SOLUTIONS</a> </h4>
       <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
@@ -305,7 +306,7 @@ th, td {
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey">
+<div id="productservices" class="container-fluid text-center bg-grey">
   <h2>Products</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
@@ -326,7 +327,7 @@ th, td {
   </div><br>
 </div>
 
-<div id="engservices" class="container-fluid">
+<div id="engineeringservices" class="container-fluid">
       <div class="row">
         <div class="col-sm-4">
           <h2>Engineering Services</h2>
