--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ th, td {
         <div class="col-sm-4">
           <h4>We offer services in</h4>
           <ul>
-            <li>Model-based Design Automation</li>
+            <li><b>Model-based Design Automation</b></li>
             <ul>
               <li>NX Open/Ufunc based automation solutions</li>
               <li>3D PDF - Anark, Tetra4D, Adobe SDK automation</li>
@@ -350,53 +350,38 @@ th, td {
               <li>NX Validation/QA solutions</li>
               <li>PMI Ballooning automation</li>
             </ul>
+            <li><b>Model-based Manufacturing Automation</b></li>
+            <ul>
+              <li>NX Open/Ufunc based automation solutions</li>
+              <li>CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)</li>
+              <li>Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)</li>
+              <li>Shop documentation automation</li>
+              <li>Feature-based machining solutions</li>
+              <li>Standardization of CAM strategies (3, 3+2, 5-axis machining)</li>
+            </ul>
+            <li><b>Model-based Inspection Automation</b></li>
+            <ul>
+              <li>NX Open/Ufunc based automation solutions</li>
+              <li>NX CMM programming productivity solutions</li>
+              <li>NX CMM &nbsp; PC-DMIS integration</li>
+            </ul>
+            <li><b>NX Environment Customization (Native &nbsp; Teamcenter)</b></li>
+              <ul>
+                <li>Environment variables management</li>
+                <li>CAD/CAM resource library setup</li>
+                <li>Legacy library migration</li>
+              </ul>
+            <li><b>Teamcenter Manufacturing Resource Manager</b></li>
+              <ul>
+                <li>Classification (Welding Processes)</li>
+                <li>Customization (Rich-client, Server)</li>
+              </ul>
           </ul>
         </div>
       </div>
-    <!-- <div class="col-sm-8">
-      <h4>We offer services in</h4>
-      <ul>
-        <li>Model-based Design Automation</li>
-        <ul>
-          <li>NX Open/Ufunc based automation solutions</li>
-          <li>3D PDF - Anark, Tetra4D, Adobe SDK automation</li>
-          <li>NX Master modelling</li>
-          <li>NX Validation/QA solutions</li>
-          <li>PMI Ballooning automation</li>
-        </ul>
-      </ul> -->
     </div>
 </div>
-  <!-- <li>Model-based Manufacturing Automation</li>
-      <li><ul>
-        <li>NX Open/Ufunc based automation solutions</li>
-        <li>CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)</li>
-        <li>Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)</li>
-        <li>Shop documentation automation</li>
-        <li>Feature-based machining solutions</li>
-        <li>Standardization of CAM strategies (3, 3+2, 5-axis machining)</li>
-      </ul></li>
-  <li>Model-based Inspection Automation</li>
-      <li><ul>
-        <li>NX Open/Ufunc based automation solutions</li>
-        <li>NX CMM programming productivity solutions</li>
-        <li>NX CMM &nbsp; PC-DMIS integration</li>
-      </ul></li>
-  <li>NX Environment Customization (Native &nbsp; Teamcenter)</li>
-    <li><ul>
-      <li>Environment variables management</li>
-      <li>CAD/CAM resource library setup</li>
-      <li>Legacy library migration</li>
-    </ul></li>
-  <li>Teamcenter Manufacturing Resource Manager</li>
-    <li><ul>
-      <li>Classification (Welding Processes)</li>
-      <li>Customization (Rich-client, Server)</li>
-    </ul></li>
-</ul> -->
-<!-- </div>
- </div>
-</div> -->
+
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
