--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@ th, td {
             <li><b>Model-based Manufacturing Automation</b></li>
             <ul>
               <li>NX Open/Ufunc based automation solutions</li>
-              <li>CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)</li>
-              <li>Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)</li>
+              <li>CNC Postprocessors </li>
+              <li>Machine Simulation Verification</li>
               <li>Shop documentation automation</li>
               <li>Feature-based machining solutions</li>
-              <li>Standardization of CAM strategies (3, 3+2, 5-axis machining)</li>
+              <li>Standardization of CAM strategies</li>
             </ul>
             <li><b>Model-based Inspection Automation</b></li>
             <ul>
