--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ th, td {
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\newyork.jpg" alt="New York" width="400" height="300">
+        <img src="img\smartcabs.png" alt="Smart Cabs" width="400" height="300">
         <p><strong>Smart Cab</strong></p>
         <p>Yes,We built Smart Cab</p>
       </div>
