--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@ th, td {
       <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
-      <!-- <span class="glyphicon glyphicon-heart logo-small"></span> -->
-      <img src="img\iot.jpg" alt="Smart Clinic" width="400" height="300">
+      <span class="glyphicon glyphicon-heart logo-small"></span>
       <h4>INTERNET OF THINGS</h4>
       <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
