--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Thinking Things Technologies</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,10 +18,9 @@
   }
   h2 {
       font-size: 24px;
-      text-transform: uppercase;
-      color: #303030;
+      color: #ffffff;
       font-weight: 600;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
   }
   h4 {
       font-size: 19px;
@@ -31,9 +30,9 @@
       margin-bottom: 30px;
   }
   .jumbotron {
-      background-color: #f4511e;
+      background-color: #aaaaaa;
       color: #fff;
-      padding: 100px 25px;
+      padding: 20px 5px;
       font-family: Montserrat, sans-serif;
   }
   .container-fluid {
@@ -43,11 +42,11 @@
       background-color: #f6f6f6;
   }
   .logo-small {
-      color: #f4511e;
+      color: #54d1f1;
       font-size: 50px;
   }
   .logo {
-      color: #f4511e;
+      color: #54d1f1;
       font-size: 200px;
   }
   .thumbnail {
@@ -60,15 +59,21 @@
       height: 100%;
       margin-bottom: 10px;
   }
+  .thumbnail1 img {
+      width: 90%;
+      height: 90%;
+      margin-bottom: 20px;
+  }
+
   .carousel-control.right, .carousel-control.left {
       background-image: none;
-      color: #f4511e;
+      color: #555555;
   }
   .carousel-indicators li {
-      border-color: #f4511e;
+      border-color: #555555;
   }
   .carousel-indicators li.active {
-      background-color: #f4511e;
+      background-color: #555555;
   }
   .item h4 {
       font-size: 19px;
@@ -118,9 +123,16 @@
       background-color: #f4511e;
       color: #fff;
   }
+  
+.carousel-inner > .item > img{
+    height: 500px;
+}
+
+
+
   .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color: #555555;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -129,9 +141,15 @@
       border-radius: 0;
       font-family: Montserrat, sans-serif;
   }
-  .navbar li a, .navbar .navbar-brand {
+   .navbar-brand {
+        font-size: 20px !important;
       color: #fff !important;
   }
+  .navbar li a, .navbar  {
+        font-size: 10px !important;
+      color: #fff !important;
+  }
+
   .navbar-nav li a:hover, .navbar-nav li.active a {
       color: #f4511e !important;
       background-color: #fff !important;
@@ -219,11 +237,11 @@ th, td {
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar">a</span>
+        <span class="icon-bar">b</span>
+        <span class="icon-bar">c</span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+	  <img src ='img/ttt.png'width='50%' height='50%'></img>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -236,11 +254,64 @@ th, td {
       </ul>
     </div>
   </div>
+
 </nav>
 
-<div class="jumbotron text-center">
-  <h1>Thinking Things Technologies</h1>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img\1.jpg" alt="New York" width="1400" height="75%">
+        <div class="carousel-caption">
+          <h3>Manufacturing Solutions</h3>
+        </div>      
+      </div>
+
+      <div class="item">
+        <img src="img\2.jpg" alt="Chicago" width="1400" height="75%">
+        <div class="carousel-caption">
+          <h3>Software Services</h3>
+        </div>      
+      </div>
+    
+      <div class="item">
+        <img src="img\3.jpg" alt="Los Angeles" width="1400" height="75%">
+        <div class="carousel-caption">
+          <h3>Smart Solutions to Healthcare</h3>
+        </div>      
+      </div>
+      <div class="item">
+        <img src="img\4.jpg" alt="Los Angeles" width="1400" height="7%">
+        <div class="carousel-caption">
+          <h3>Internet of Things</h3>
+        </div>      
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
 </div>
+  <div class="jumbotron text-center">
+  <h2>Thinking Things Technologies</h2>
+</div>
+
+
 
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
@@ -275,14 +346,14 @@ th, td {
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
     </div>
     <div class="col-sm-8">
-      <h2>Our Values</h2><br>
+      <h3>Our Values</h3><br>
       <h4>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.</h4><br>
     </div>
   </div>
 </div>
 <!-- Container (Services Section) -->
 <div id="solutions" class="container-fluid text-center">
-  <h2>SOLUTIONS</h2>
+  <h3>SOLUTIONS</h3>
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
@@ -305,32 +376,11 @@ th, td {
   <br><br>
 </div>
 
-<!-- Container (Portfolio Section) -->
-<div id="productservices" class="container-fluid text-center bg-grey">
-  <h2>Products</h2><br>
-  <h4>What we have created</h4>
-  <div class="row text-center slideanim">
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="img\smartclinic1.jpg" alt="Smart Clinic" width="400" height="300">
-        <p><strong>Smart Clinic</strong></p>
-        <p>Yes, we built Smart Clinic</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="img\smartcabs.png" alt="Smart Cabs" width="400" height="300">
-        <p><strong>Smart Cab</strong></p>
-        <p>Yes,We built Smart Cab</p>
-      </div>
-    </div>
-  </div><br>
-</div>
 
 <div id="engineeringservices" class="container-fluid">
       <div class="row">
         <div class="col-sm-4">
-          <h2>Engineering Services</h2>
+          <h3>Engineering Services</h3>
         </div>
       </div>
       <div class="row">
@@ -382,9 +432,39 @@ th, td {
     </div>
 </div>
 
+
+<!-- Container (Portfolio Section) -->
+<div id="productservices" class="container-fluid text-center bg-grey">
+  <h3>Products</h3><br>
+  <h3>Innovative solutions </h3>
+  <div class="row text-center slideanim">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="img\smartclinic1.jpg" alt="Smart Clinic" width="400" height="300">
+        <p><strong>Smart Clinic</strong></p>
+        <p>Total solution for Clinic Management</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="img\smartcabs.png" alt="Smart Cabs" width="400" height="300">
+        <p><strong>Smart Cab</strong></p>
+        <p>Vehicle Fleet Management</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail1">
+        <img src="img\smartbasket.png" alt="Smart Cabs" width="400" height="300">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <h3 class="text-center">CONTACT</h3><br>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
@@ -432,7 +512,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made By Thinking Things Technologies <a href="https://www.w3schools.com" title="Visit Thinking Things">www.thinkingthings.com</a></p>
+  <p>Made By Thinking Things Technologies <a href="http://www.thinkingthings.com" title="Visit Thinking Things">www.thinkingthings.com</a></p>
 </footer>
 
 <script>
