--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made By Thinking Things Technologies <a href="http://www.thinkingthings.com" title="Visit Thinking Things">www.thinkingthings.com</a></p>
+  <p>Made By Thinking Things Technologies <a href="http://www.thinkingtechs.com" title="Visit Thinking Things">www.thinkingtechs.com</a></p>
 </footer>
 
 <script>
